--- a/johndeerejson.html
+++ b/johndeerejson.html
@@ -8,7 +8,7 @@
         <!-- sha256 -->
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/hmac-sha256.js"></script>
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js"></script>
-        <script src="oauth-1.0a.js"></script>
+        <script src="oauth-1.0a/oauth-1.0a.js"></script>
         <script src="xml2json.js"></script>
     </head>
     <body>
@@ -96,7 +96,7 @@
                 },
                 dataType: 'json',
                 success: function(response) {
-                    getClimateBoundaries(response);  // {"fields": [ {...}, {...}, ... ] }
+                    getClimateBoundaries(response); 
                 },
                 error: function(error) {
                     console.log(error);
@@ -118,12 +118,20 @@
         
         function getUserInfo(){
             $.ajax({
+                beforeSend : function(req) { 
+                    req.setRequestHeader('Authorization', 'Bearer d5c7ee3c-f97c-4e47-9918-1333750bf346'); 
+                }, 
                 url: 'https://api.climate.com/api/authdemo/info/self-aware',
                 xhrFields: {
                     withCredentials: false
                 },
                 dataType: 'json',
-                success:
+                success: function(response) {
+                    getClimateData(response.headers_in.Authorization);
+                },
+                error: function(response) {
+                    console.log(response);
+                }
             });
         }
         
