--- a/johndeerejson.html
+++ b/johndeerejson.html
@@ -8,7 +8,7 @@
         <!-- sha256 -->
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/hmac-sha256.js"></script>
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js"></script>
-        <script src="oauth-1.0a/oauth-1.0a.js"></script>
+        <script src="oauth-1.0a.js"></script>
         <script src="xml2json.js"></script>
     </head>
     <body>
